# OpenHySL

./: .gitignore
ADwin_Basic/: Makefile  Substepping_Process.bas  Table_Control.bas
ADwin_GUI/PMWidget/: Makefile  PMWidget.pro  moc_PMWidget.cpp
ADwin_GUI/PMWidget/Form/: PMWidget.ui
ADwin_GUI/PMWidget/include/: ADwin.hpp  PMWidget.hpp  Support_Routines.hpp  ui_PMWidget.h
ADwin_GUI/PMWidget/src/: ADwin.cpp  PMWidget.cpp  Support_Routines.cpp  main.cpp
ConfFile_GUI/: ConfFile_GUI.pro  Makefile  moc_ConfFile.cpp  ui_ConfFileGUI.h
ConfFile_GUI/Form/: ConfFileGUI.ui
ConfFile_GUI/include/: ConfFile.hpp
ConfFile_GUI/src/: ConfFile.cpp  main.cpp
Deprecated/: CMakeLists.txt
Deprecated/Common_Files/include/: Colors.h  Conf_Parser.h  ErrorHandling.h  HDF5_Operations.h  NSEP_Communication_Sync.h  NSEP_Definitions.h  Netlib.h  OPSocket.h  OpenFresco_Communication.h
Deprecated/Common_Files/src/: ErrorHandling.c  OpenFresco_Communication.c  RoutinesADwin.c
Deprecated/Documentation/: References_Dissertation.bib
Deprecated/PETSc/src/: 504LV.txt  EndingStep.h  Makefile  OpenFresco_Communication.c  main.c.old
Deprecated/Parallel/include/: EndingStep.h  Precalculations.h
Deprecated/Parallel/src/: ComputeU0.c
Deprecated/Sparse/include/: ComputeU0.h  Initiation.h
Deprecated/Sparse/src/: ComputeU0.c
Deprecated/Substructure/include/: Exact_Solution.h  PIndependent.h
Effective_Stiffness_Formulation/: CMakeLists.txt
Effective_Stiffness_Formulation/CMakeCustomFiles/: CMakeADwin.cmake  CMakeMKL.cmake  CMakeMathLibs.cmake
Effective_Stiffness_Formulation/Common_Files/include/: ErrorHandling.h  HDF5_Operations.h  NSEP_Communication_Sync.h  Netlib.h  OPSocket.h  OpenFresco_Communication.h  RoutinesADwin.h  Send_Receive_Data.h  Substructure.h
Effective_Stiffness_Formulation/Common_Files/src/: .#Send_Receive_Data.c  Conf_Parser.c  ErrorHandling.c  HDF5_Operations.c  NSEP_Communication_Sync.c  OPSocket.c  OpenFresco_Communication.c  RoutinesADwin.c  Send_Receive_Data.c  Substructure.c
Effective_Stiffness_Formulation/Documentation/: SAlgorithm.doxyfile
Effective_Stiffness_Formulation/PETSc/src/: ComputeU0.c  ComputeU0.h  ConfFile.conf  EndingStep.c  ErrorHandling.c  ErrorHandling.h  GroundMovement.txt  Initiation.c  MatrixVector.h  Out  Precalculations.c  Precalculations.h  main.c
Effective_Stiffness_Formulation/Parallel/include/: ComputeU0.h  EndingStep.h  Initiation.h  PMatrixVector.h  Precalculations.h
Effective_Stiffness_Formulation/Parallel/src/: ComputeU0.c  EndingStep.c  Initiation.c  PMatrixVector.c  Precalculations.c  main.c
Effective_Stiffness_Formulation/Sequential/: CMakeLists.txt
Effective_Stiffness_Formulation/Sequential/include/: ComputeU0.h  EndingStep.h  Initiation.h  MatrixVector.h  Precalculations.h
Effective_Stiffness_Formulation/Sequential/src/: #Precalculations.c#  ComputeU0.c  EndingStep.c  Initiation.c  MatrixVector.c  Precalculations.c  main.c
Effective_Stiffness_Formulation/Sparse/: CMakeLists.txt
Effective_Stiffness_Formulation/Sparse/include/: ComputeU0.h  EndingStep.h  Initiation.h  MatrixVector.h  Precalculations.h
Effective_Stiffness_Formulation/Sparse/src/: ComputeU0.c  EndingStep.c  Initiation.c  MatrixVector.c  Precalculations.c  main.c
Effective_Stiffness_Formulation/Sparse_Sequential/: CMakeLists.txt
Effective_Stiffness_Formulation/Sparse_Sequential/include/: ComputeU0.h  EndingStep.h  Initiation.h  MatrixVector.h  Precalculations.h
Effective_Stiffness_Formulation/Sparse_Sequential/src/: ComputeU0.c  EndingStep.c  Initiation.c  MatrixVector.c  Precalculations.c  main.c
Effective_Stiffness_Formulation/Substructure/: CMakeLists.txt
Effective_Stiffness_Formulation/Substructure/include/: Custom_Server.h  Substructure.h
Effective_Stiffness_Formulation/Substructure/src/: Custom_Server.c  NSEP_Dorka_FCM.c  OpenFresco_Dorka.c  PIndependent.c  Substructure.c
Effective_Stiffness_Formulation_Double/: CMakeLists.txt
Effective_Stiffness_Formulation_Double/CMakeCustomFiles/: CMakeATLAS.cmake  CMakeMKL.cmake
Effective_Stiffness_Formulation_Double/Common_Files/include/: Send_Receive_Data.h
Effective_Stiffness_Formulation_Double/Common_Files/src/: ErrorHandling.c  NSEP_Communication_Sync.c  OpenFresco_Communication.c  Send_Receive_Data.c  Substructure.c
Effective_Stiffness_Formulation_Double/Documentation/: SAlgorithm.doxyfile
Effective_Stiffness_Formulation_Double/PETSc/src/: Conf_Parser.c  Couple_Nodes.txt
Effective_Stiffness_Formulation_Double/Parallel/src/: EndingStep.c  PMatrixVector.c
Effective_Stiffness_Formulation_Double/Sequential/include/: Precalculations.h
Effective_Stiffness_Formulation_Double/Sequential/src/: Precalculations.c
Effective_Stiffness_Formulation_Float/Documentation/: SAlgorithm.doxyfile
Effective_Stiffness_Formulation_Float/Parallel/: CMakeLists.txt
Effective_Stiffness_Formulation_Float/Parallel/include/: ComputeU0.h
Effective_Stiffness_Formulation_Float/Parallel/src/: Initiation.c
Effective_Stiffness_Formulation_Float/Sparse/: CMakeLists.txt
Help_routines/: tabledis.txt  tabledismod.txt
Help_routines/Filter/: Filter_DFG.c
Help_routines/Full_To_Sparse/: 504K.txt  504K_Sp.txt  504M.txt  504M_Sp.txt  Full_To_Sparse  Full_To_Sparse.c  Keinv.txt  Keinv_PARDISO.txt  Keinv_Sp.txt  Makefile
Help_routines/GenerateLV/: 1008LV.txt  10512LV.txt  22200LV.txt  972LV.txt  981LV.txt  GenerateLV  main.c
Help_routines/Make_GroundMovement_File/: GroundMovement.txt.old  Make_GM_File.c  tableacc.txt  tablevel.txt
Help_routines/PETSc_ASCII_To_Binary/: 504K_Sp.txt  504M_Sp.txt  Ascii_to_binary.c  Mass.txt  Stiff.txt  bin.out
Help_routines/PETSc_ASCII_To_Binary_Vector/: 504LV.txt  Ascii_to_binary  Ascii_to_binary.c  Makefile
Help_routines/SAP2000_Coordinates/: Makefile  ProcessCoordinates.c  ProcessCoordinates_Temple.c
Help_routines/SAP2000_LVector/: SAP2000_LVector.c
Help_routines/SAP2000_to_MMFormat/: SAP2000_to_MMFormat.c
Help_routines/Scale_InputFile/: Scale_InputFile.c
Help_routines/Write_Configuration_File/: WriteConfFile.c  WriteConfFile_FixedDamping.c
(+41 files in other folders)
